  * Also look for upstream tarballs in the archives. Do this in preference
    to the watch file, for the case where the upstream was repacked.
  * Filter out any changes to .bzr in packages that are being imported as they
    will totally mess things up. If the branch is in the source package then
    just use apt-get source. (LP: #156003)
  * bzr 0.92 is required.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 31 Oct 2007 18:44:43 +0000

bzr-builddeb (0.91) unstable; urgency=low

  [ Frédéric Brin ]
  * Correct unknown variable (files) when importing dsc.
  * chmod 755 debian/rules when importing dsc

  [ James Westby ]
  * Now handles merge mode with multiple entries in the root of
    upstream's tarball, which was causing havoc with dh-make-php packages.
    Thanks to Mark A. Hershberger for the report and Adeodato Simó
    for the pointer to the fix. (Closes: #440069)
  * Add version_info attribute so that bzrlib can find out the version of
    the plugin. Please try and remember to update it when releasing (set
    the word to 'final').
  * Use None instead of [] to revert all files as the latter is deprecated
    in bzr 0.91. Bump the required version accordingly.
  * Build the working tree by default (so --working-tree now has no effect,
    along with --ignore-changes).
  * Add --revision option to allow building an old revision of the branch
    without doing revert or similar.
  * Add the start of a blackbox test suite.
  * Add the ability to export an upstream branch in normal mode.
  * Add a bd-do command for running commands when in merge mode. This
    is useful when you need the full upstream source, for instance patch
    handling.
  * Add hook support for running arbitrary commands at pre-defined points
    in the build.
  * Support $UPSTREAM_VERSION in the export-upstream-revision configuration
    option. This allows builddeb to find the correct upstream revision based