@@ -8,8 +8,10 @@ bzr-builddeb (0.92) unstable; urgency=low
     will totally mess things up. If the branch is in the source package then
     just use apt-get source. (LP: #156003)
   * bzr 0.92 is required.
+  * Improve the error message when the upstream tag is not found to actually
+    give the name of the expected tag.
 
- -- James Westby <jw+debian@jameswestby.net>  Wed, 31 Oct 2007 18:44:43 +0000
+ -- James Westby <jw+debian@jameswestby.net>  Wed, 31 Oct 2007 19:15:54 +0000
 
 bzr-builddeb (0.91) unstable; urgency=low
 
